# TRPT

./: .gitignore  CHANGELOG.md  build.spec  claude.md  main.py  停止服务.bat  启动前端.bat  启动后端.bat  启动系统-开发模式.bat  启动系统.bat  启动说明.md  属性上图处理.txt  属性图模版.docx  属性土壤质地.txt  属性数据处理.txt  属性机械组成.txt  打包程序.bat  数据报告_20251209_182356.xlsx  数据报告_new.py  系统诊断.bat
backend/: .env  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  ai_config.py  config.py  data_manage.py  grading.py  region.py  report.py  topic_config.py  upload.py
backend/app/core/: database.py  (+2 more)
backend/data/: projects.db
backend/output/: .process_records.json  a_pH_分析报告.docx  a_交换性盐基总量_分析报告.docx  a_交换性钙_分析报告.docx  a_交换性钠_分析报告.docx  a_交换性钾_分析报告.docx  a_交换性镁_分析报告.docx  a_全氮_分析报告.docx  a_全磷_分析报告.docx  a_全钾_分析报告.docx  a_土壤容重_分析报告.docx  a_有效硅_分析报告.docx  a_有效硫_分析报告.docx  a_有效硼_分析报告.docx  a_有效磷_分析报告.docx  a_有效钼_分析报告.docx  a_有效铁_分析报告.docx  a_有效铜_分析报告.docx  a_有效锌_分析报告.docx  a_有效锰_分析报告.docx  a_有机质_分析报告.docx  a_机械组成-砂粒_分析报告.docx  a_机械组成-粉粒_分析报告.docx  a_机械组成-黏粒_分析报告.docx  a_水溶性盐总量_分析报告.docx  a_电导率_分析报告.docx  a_缓效钾_分析报告.docx  a_耕作层厚度_分析报告.docx  a_速效钾_分析报告.docx  a_阳离子交换量_分析报告.docx  d_pH_分析报告.docx  ~$耕作层厚度_分析报告.docx  属性图上图处理_20251206_013330.xlsx  属性图上图处理_20251206_020629.xlsx  属性图数据处理_20251206_013834.xlsx  属性图数据处理_20251206_015456.xlsx  属性图数据处理_20251206_015623.xlsx  属性图数据处理_20251206_020553.xlsx  属性图数据处理_20251206_022000.xlsx  属性图数据处理_20251206_022232.xlsx  (+17 more)
backend/tests/: test_chart.py  test_health.py  test_word.py
backend/uploads/: 20251206_020823_952d818f.csv
(+84 files in other folders)
